modules/voyscript/tests/scripts/analyzer/errors/gd_utility_function_wrong_arg.voy
func test():
	print(len(Color())) # VoyScript utility function.
